# esperanto

./: .gitignore  Cargo.toml  README.md  test_server.sh
dev-resources/: att_info.txt
docs/: NITRO_ATT.md  USER_GUIDE.md
esperanto-core/: Cargo.toml
esperanto-core/policies-resources/: POLICIES.md  access_policy_pii_data_transfer.yaml  integrity_policy_nitro_pii_nitro_enclave.yaml  integrity_policy_tpm_linux_server_integrity.yaml
esperanto-core/src/: error.rs  lib.rs  policy.rs  verifier.rs
esperanto-core/src/attestation/: keylime.rs  mod.rs  nitro.rs  types.rs
esperanto-core/src/golden_vault/: client.rs
esperanto-core/src/policies/: definitions.rs  parser.rs  policyManager.rs  resolver.rs
esperanto-server/: Cargo.toml
esperanto-server/src/: main.rs
esperanto-server/src/api/: handlers.rs  router.rs
