[package]
name = "esperanto-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
cose = "0.1"
ring = "0.16"
thiserror = "2.0.12"
attestation-doc-validation = "0.10.0"
x509-parser = "0.14.0"
hex = "0.4.3"
base64 = "0.22.1"
tokio = { version = "1.45.1", features = ["full"] }
